--- a/portfolio.html
+++ b/portfolio.html
@@ -324,7 +324,20 @@
               </li>
             </ul>
           </div>
+        
+        <div>
+          <form>
+            <label>
+              <h4 class="newsletter-text">ZAPISZ SIĘ DO NEWSLETTERA</h4>
+              <input type="email" name="email" placeholder="E-mail" />
+            </label>
+            <button type="submit">Zapisz się
+              <div class="newsletter-button">
+                <svg class="send-icon" width="24" height="24"><use href="./images/icons.svg#icon-send"></use></svg>
+            </button>
+          </form>
         </div>
+      </div>
       </section>
     </footer>
   </body>
