--- a/index.html
+++ b/index.html
@@ -376,16 +376,16 @@
             </ul>
           </div>
         
-        <div class="container footbar-newsletter">
-          <form>
+       <div>
+          <form class=" cointainer footbar-newsletter">
             <label>
               <h4 class="newsletter-text">ZAPISZ SIĘ DO NEWSLETTERA</h4>
               <input type="email" name="email" placeholder="E-mail" />
-            </label>
-            <button type="submit">Zapisz się
-              <div class="newsletter-button">
+            </label><div>
+            <button type="submit" class="newsletter-button"><span class="joinus">Zapisz się</span>
+              
                 <svg class="send-icon" width="24" height="24"><use href="./images/icons.svg#icon-send"></use></svg>
-            </button>
+            </button></div>
           </form>
         </div>
       </div>
@@ -406,13 +406,13 @@
           <label class="input-container">
             <span class="label-text">Telefon</span>
             <input class="input-element" type="text" id="name-input" name="name-input">
-            <svg class="modal-icon" width="12" height="12"><use href="./images/icons.svg#icon-phone-modal"></use>
+            <svg class="modal-icon" width="13" height="13"><use href="./images/icons.svg#icon-phone-modal" ></use>
             </svg>
           </label>
           <label class="input-container">
             <span class="label-text">Email</span>
             <input class="input-element" type="text" id="name-input" name="name-input">
-            <svg class="modal-icon" width="12" height="12"><use href="./images/icons.svg#icon-email-modal"></use>
+            <svg class="modal-icon" width="15" height="13"><use href="./images/icons.svg#icon-email-modal"></use>
             </svg>
           </label>
           <label class="input-container">
