--- a/index.html
+++ b/index.html
@@ -380,12 +380,15 @@
           <form class=" cointainer footbar-newsletter">
             <label>
               <h4 class="newsletter-text">ZAPISZ SIĘ DO NEWSLETTERA</h4>
-              <input type="email" name="email" placeholder="E-mail" />
-            </label><div>
+              <input class="input-mail" type="email" name="email" placeholder="E-mail" />
+             
+            </label>
+            <div class="button-position">
             <button type="submit" class="newsletter-button"><span class="joinus">Zapisz się</span>
               
-                <svg class="send-icon" width="24" height="24"><use href="./images/icons.svg#icon-send"></use></svg>
-            </button></div>
+              <svg class="send-icon" width="24" height="24"><use href="./images/icons.svg#icon-send"></use></svg>
+          </button>
+        </div>
           </form>
         </div>
       </div>
