--- a/portfolio.html
+++ b/portfolio.html
@@ -324,20 +324,30 @@
               </li>
             </ul>
           </div>
-        
-        <div>
-          <form>
-            <label>
-              <h4 class="newsletter-text">ZAPISZ SIĘ DO NEWSLETTERA</h4>
-              <input type="email" name="email" placeholder="E-mail" />
-            </label>
-            <button type="submit">Zapisz się
-              <div class="newsletter-button">
-                <svg class="send-icon" width="24" height="24"><use href="./images/icons.svg#icon-send"></use></svg>
-            </button>
-          </form>
+
+          <div>
+            <form class="cointainer footbar-newsletter">
+              <label>
+                <h4 class="newsletter-text">ZAPISZ SIĘ DO NEWSLETTERA</h4>
+                <input
+                  class="input-mail"
+                  type="email"
+                  name="email"
+                  placeholder="E-mail"
+                />
+              </label>
+              <div class="button-position">
+                <button type="submit" class="newsletter-button">
+                  <span class="joinus">Zapisz się</span>
+
+                  <svg class="send-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-send"></use>
+                  </svg>
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
-      </div>
       </section>
     </footer>
   </body>
