--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
           <h2 class="team">Nasz zespół</h2>
           <ul class="card-set our-team">
             <li>
+              
               <div class="card">
                 <img
                   class="card-image no-gap"
@@ -403,26 +404,30 @@
           <label class="input-container">
             <span class="label-text">Imię</span>
             <input class="input-element" type="text" id="name-input" name="name-input">
-            <svg class="modal-icon" width="12" height="12"><use href="./images/icons.svg#icon-person-modal"></use>
+            <svg class="modal-icon" width="12" height="12"  ><use  href="./images/icons.svg#icon-person-black2"></use>
             </svg>
           </label>
           <label class="input-container">
             <span class="label-text">Telefon</span>
             <input class="input-element" type="text" id="name-input" name="name-input">
-            <svg class="modal-icon" width="13" height="13"><use href="./images/icons.svg#icon-phone-modal" ></use>
+            <svg class="modal-icon" witdh="31" height="18" ><use href="./images/icons.svg#icon-phone-black2" ></use>
             </svg>
           </label>
           <label class="input-container">
             <span class="label-text">Email</span>
             <input class="input-element" type="text" id="name-input" name="name-input">
-            <svg class="modal-icon" width="15" height="13"><use href="./images/icons.svg#icon-email-modal"></use>
+            <svg class="modal-icon" width="15" height="13"><use href="./images/icons.svg#icon-email-black2"></use>
             </svg>
           </label>
           <label class="input-container">
           <span class="label-text">Komentarz</span>
             <textarea name="feedback" placeholder="Wprowadź tekst"></textarea>
           </label>
+          <label>
+          <input type="checkbox" name="rules" value="Oświadczam iż akceptuje Regulamin i Politykę prywatności" checked/>
+          Oświadczam iż akceptuje Regulamin i Politykę prywatności</label>
         </div>
+
     </div>
     <script src="./js/modal.js"></script>
   </body>
