Add ready to check hw6

--- a/portfolio.html
+++ b/portfolio.html
@@ -305,7 +305,7 @@
           </div>
           <div class="container footbar-social">
             <ul>
-              <li><h4 class="social-text">DOŁĄCZ DO NAS</h4></li>
+              <li><span class="social-text">DOŁĄCZ DO NAS</span></li>
               <li>
                 <div class="icon-social-footer">
                   <svg class="footer-icon" width="44" height="44">
@@ -324,29 +324,25 @@
               </li>
             </ul>
           </div>
-
-          <div>
-            <form class="cointainer footbar-newsletter">
-              <label>
-                <h4 class="newsletter-text">ZAPISZ SIĘ DO NEWSLETTERA</h4>
-                <input
-                  class="input-mail"
-                  type="email"
-                  name="email"
-                  placeholder="E-mail"
-                />
-              </label>
-              <div class="button-position">
-                <button type="submit" class="newsletter-button">
-                  <span class="joinus">Zapisz się</span>
-
-                  <svg class="send-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-send"></use>
-                  </svg>
-                </button>
-              </div>
-            </form>
-          </div>
+          <form class="cointainer footbar-newsletter">
+            <label class="newsletter-label">
+              <span class="newsletter-text">ZAPISZ SIĘ DO NEWSLETTERA</span>
+              <input
+                class="input-mail"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <div class="button-position">
+              <button type="submit" class="newsletter-button">
+                <span class="joinus">Zapisz się</span>
+                <svg class="send-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
         </div>
       </section>
     </footer>
