--- a/index.html
+++ b/index.html
@@ -375,13 +375,13 @@
               </li>
             </ul>
           </div>
-          <form class="cointainer footbar-newsletter">
+          <form class="cointainer footbar-newsletter" name="newstletter-form">
             <label class="newsletter-label">
               <span class="newsletter-text">ZAPISZ SIĘ DO NEWSLETTERA</span>
               <input
                 class="input-mail"
                 type="email"
-                name="email"
+                name="newsletter-email"
                 placeholder="E-mail"
               />
             </label>
@@ -401,39 +401,24 @@
       <div class="modal">
         <button type="button" class="close-button" data-modal-close>X</button>
         <h2 class="modal-header">Zostaw swoje dane w formularzu poniżej</h2>
-        <div class="modal-details">
+        <form class="modal-details" name="signup_form" autocomplete="on">
           <label class="input-container">
             <span class="label-text">Imię</span>
-            <input
-              class="input-element"
-              type="text"
-              id="name-input"
-              name="name-input"
-            />
+            <input class="input-element" type="text" name="user_name" />
             <svg class="modal-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-person-black2"></use>
             </svg>
           </label>
           <label class="input-container">
             <span class="label-text">Telefon</span>
-            <input
-              class="input-element"
-              type="text"
-              id="phone"
-              name="name-input"
-            />
+            <input class="input-element" type="number" name="phone_number" />
             <svg class="modal-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-phone-black2"></use>
             </svg>
           </label>
           <label class="input-container">
             <span class="label-text">Email</span>
-            <input
-              class="input-element"
-              type="text"
-              id="email"
-              name="name-input"
-            />
+            <input class="input-element" type="email" name="email" />
             <svg class="modal-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-email-black2"></use>
             </svg>
@@ -446,28 +431,27 @@
               placeholder="Wprowadź tekst"
             ></textarea>
           </label>
+          <label class="checkbox-container">
+            <input
+              class="checkbox-input"
+              type="checkbox"
+              name="reg-priv_policy"
+              value="agree"
+            />
+            <svg class="checkbox-icon" width="16" height="15">
+              <use href="./images/icons.svg#icon-icon-check-1"></use>
+            </svg>
 
-          <form>
-            <label class="checkbox-container" for="checkbox">
-              <input class="checkbox-input" type="checkbox" id="checkbox" />
-
-              <svg class="checkbox-icon" width="16" height="15">
-                <use href="./images/icons.svg#icon-icon-check-1"></use>
-              </svg>
-
-              <span class="rules">
-                Oświadczam iż akceptuję
-                <span class="rules-title"> Regulamin</span> i
-                <span class="rules-title">Politykę prywatności</span>
-              </span>
-            </label>
-          </form>
-          <div class="send">
-            <button type="submit" class="send-button">
-              <span class="send-text">Wyślij</span>
-            </button>
-          </div>
-        </div>
+            <span class="rules">
+              Oświadczam iż akceptuję
+              <a class="rules-link" href=""> Regulamin </a> i
+              <a class="rules-link" href="">Politykę prywatności.</a>
+            </span>
+          </label>
+          <button type="submit" value="submit" class="send-button">
+            <span class="send-text">Wyślij</span>
+          </button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
