Add correction at hw6

--- a/portfolio.html
+++ b/portfolio.html
@@ -324,13 +324,13 @@
               </li>
             </ul>
           </div>
-          <form class="cointainer footbar-newsletter">
+          <form class="cointainer footbar-newsletter" name="newstletter-form">
             <label class="newsletter-label">
               <span class="newsletter-text">ZAPISZ SIĘ DO NEWSLETTERA</span>
               <input
                 class="input-mail"
                 type="email"
-                name="email"
+                name="newsletter-email"
                 placeholder="E-mail"
               />
             </label>
